# fiberqc

./: .gitignore  LICENSE  README.md  app.py  ask.py  batch.py  claude_layer.py  data_io.py  evidence.py  guppy_to_csv.py  motion_check.py  multiverse.py  nwb_to_csv.py  pipeline.py  presentation.html  pyproject.toml  requirements-docs.txt  robustness_report.md  run_baseline.py  tdt_to_csv.py
.github/workflows/: docs.yml  tests.yml
docs/: api.rst  conf.py  index.rst
examples/: demo.ipynb
fiberqc/: __init__.py  core.py  io.py  metrics.py  multiverse.py  report.py
tests/: test_fiberqc.py
