[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fiberqc"
version = "0.1.0"
description = "Quality control for fiber photometry: is your result robust to preprocessing choices?"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "statsmodels",
    "anthropic",
]

[project.optional-dependencies]
tdt = ["tdt"]

[tool.setuptools]
packages = ["fiberqc"]
